[gd_scene load_steps=5 format=3 uid="uid://ctg5aa8dne441"]

[ext_resource type="Script" uid="uid://dq04rs5guksyp" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://cfb3qmdhlb4qb" path="res://fonts/Xolonium-Regular.ttf" id="2_8sq4i"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD(CanvasLayer)" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel(Label)" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message(Label)" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton(Button)" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.5
offset_top = -140.0
offset_right = 98.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = " Start"

[node name="MessageTimer(Timer)" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton(Button)" to="." method="_on_start_button_button_pressed"]
[connection signal="timeout" from="MessageTimer(Timer)" to="." method="_on_message_timer_timer_timeout"]
